<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="licenta.andrei.catanoiu.securehive.fragments.home.HomeFragment"
        android:label="@string/title_home">
    </fragment>

    <fragment
        android:id="@+id/navigation_devices"
        android:name="licenta.andrei.catanoiu.securehive.fragments.devices.DevicesFragment"
        android:label="@string/add_devices">
        <action
            android:id="@+id/action_devices_to_device_info"
            app:destination="@id/navigation_device_info" />
    </fragment>

    <fragment
        android:id="@+id/navigation_account"
        android:name="licenta.andrei.catanoiu.securehive.fragments.account.AccountFragment"
        android:label="@string/title_account">
    </fragment>

    <activity
        android:id="@+id/navigation_device_info"
        android:name="licenta.andrei.catanoiu.securehive.activities.DeviceInfoActivity"
        android:label="@string/device_name">
        <argument
            android:name="deviceId"
            app:argType="string" />
    </activity>

</navigation> 